Namefy/style.css
* {
    height: 100vh;
    width: 100%;
    margin: 0;
}

h1, h2, h3, h4, h5, h6, button {
    height: auto;
    margin: 0;
    text-transform: uppercase;
} 

.container {
    height: 100vh;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
    font-family: sans-serif;
    background-color: #000;
    color: #fff;
}

.container h1, .container h3, p, footer {
    font-family: Circular, Helvetica, Arial, sans-serif;
    margin-bottom: 0;
}

.header {
    text-align: center;
    height: auto;
    margin-top: 25px;
    margin-bottom: 35px;
}

.title {
    margin-bottom: 5px;
}

.subtitle {
    font-size: 1em;
}

.functionality {
    display: inline-block;
    width: 40%;
    text-align: center;
    padding: 0 20px;
}

.label {
    font-size: 18px;
    margin-bottom: 20px;
}

#user-input {
    height: 40px;
    width: 100%;
    margin-top: 30px;
    margin-bottom: 30px;
    background-color:#5a5858;
    color: #fff;
    border-radius: 500px;
    border: none;
    padding-left: 15px;
    letter-spacing: .5px;
}

#playlist-name {
    height: 100px;
    margin-bottom: 150px;
}

#playlist-name p {
    height: auto;
}

.btn {
    width: 313px;
    height: 56px;
    border: none; 
    border-radius: 500px;
    padding: 19px 56px 21px;
    letter-spacing: 2px;
    font-weight: bold;
    background-color: #1DB954;
    color: #fff;
    position: relative;
    bottom: 10vh;
}


.btn:hover {
    background-color: #1ed760;
    cursor: pointer;
} 

.footer {
    height: 10vh;
    background-color: #1DB954;
    text-align: center;
}

.footer p {
    height: auto;
    padding: 24px 0;
    text-transform: none;
}

a {
    text-decoration: none;
    color: #fff;
}

.footer a:hover {
    text-decoration: underline;
}

@media screen and (min-width: 300px) 
and (max-width: 600px) {
    .container {
        overflow: hidden;
        width: 100%;
    }

    .header {
        margin-bottom: 70px;
    }

    .title {
        font-size: 1.5em;
    }

    .subtitle  {
        font-size: .8em;
    }
    
    .functionality .label {
        font-size: .8em;
        font-weight: bold;
    }

    .functionality {
        width: 90%;
    }

    #user-input {
        height: 40px;
        width: 90%;
        margin-top: 25px;
        margin-bottom: 80px;
        background-color: #282828;
        color: #fff;
        border: none;
        padding-left: 15px;
        letter-spacing: .5px;
    }

    #playlist-name {
        height: 100px;
        margin-bottom: 70px;
    }
    
    #playlist-name p {
        height: auto;
        position: relative;
        top: 15vh;
    }

    .btn {
        width: 290px;
        position: relative;
        top: -5vh;
    }
}

@media screen and (min-width: 601px) and (max-width: 1200px) {
    .functionality {
        width: 90%;
        position: relative;
        top: 8vh;
    }

    #user-input {
        height: 40px;
        width: 90%;
        margin-top: 25px;
        margin-bottom: 80px;
        background-color: #282828;
        color: #fff;
        border: none;
        padding-left: 15px;
        letter-spacing: .5px;
    }
    
    #playlist-name {
        height: 100px;
        margin-bottom: 70px;
    }
    
    #playlist-name p {
        height: auto;
        position: relative;
        top: 15vh;
    }
    
    .btn {
        position: relative;
        top: -5vh;
    }
    .footer p {
        height: auto;
        /* padding: 24px 0; */
        text-transform: none;
    }
}

